# ByteHound

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/workflows/: cflite_cron.yml  cflite_pr.yml  ci.yml
cmake/: Sanitizers.cmake
docs/: architecture.md  case-study-template.md  crash-triage.md  fuzzing-methodology.md  results.md
fuzz/: fuzz_lexer.cpp  fuzz_mutation_sequence.cpp  fuzz_parser.cpp  fuzz_roundtrip.cpp  tinycfg.dict
fuzz/seed_corpus/lexer/: comments.txt
fuzz/seed_corpus/parser/: minimal.cfg  nested.cfg
fuzz/seed_corpus/roundtrip/: server.cfg
include/tinycfg/: ast.hpp  error.hpp  lexer.hpp  limits.hpp  parser.hpp  serializer.hpp  tinycfg.hpp
scripts/: build.sh  clean.sh  fuzz-smoke.sh  minimize.sh  reproduce.sh  test.sh
src/: ast.cpp  cli.cpp  lexer.cpp  parser.cpp  serializer.cpp
tests/: lexer_tests.cpp  parser_tests.cpp  regression_tests.cpp  serializer_tests.cpp  test_harness.hpp  test_main.cpp
tests/data/: invalid_missing_brace.cfg
training/legacy_parser/: CASE_STUDY.md  README.md  fuzz_legacy_parser.cpp  legacy_parser.cpp  legacy_parser.hpp  legacy_parser_tests.cpp
